--- a/.github/workflows/test-and-connect-publish.yaml
+++ b/.github/workflows/test-and-connect-publish.yaml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Test Connectivity to Server
+        run: |
+          curl -I ${{ secrets.CONNECT_SERVER }}
+
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
