--- a/.github/workflows/test-and-connect-publish.yaml
+++ b/.github/workflows/test-and-connect-publish.yaml
@@ -20,6 +20,10 @@ jobs:
           CONNECT_SERVER: ${{ secrets.CONNECT_SERVER }}
           CONNECT_API_KEY: ${{ secrets.CONNECT_API_KEY }}
 
+      - name: List files in the directory
+        run: |
+          ls -la shiny-app-demo-cicd-github-actions
+
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
