--- a/.github/workflows/test-and-connect-publish.yaml
+++ b/.github/workflows/test-and-connect-publish.yaml
@@ -12,6 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: List files in the repository
+        run: |
+          echo "Listing all files in the repository..."
+          ls -R
+
       - name: Test Connectivity to RStudio Connect
         run: |
           echo "Testing connectivity to RStudio Connect server..."
@@ -55,4 +60,4 @@ jobs:
           url: ${{ secrets.CONNECT_SERVER }}
           api-key: ${{ secrets.CONNECT_API_KEY }}
           access-type: logged_in
-          dir: ./
+          dir: shiny-app-demo-cicd-github-actions
