--- a/.github/workflows/test-and-connect-publish.yaml
+++ b/.github/workflows/test-and-connect-publish.yaml
@@ -36,6 +36,6 @@ jobs:
         with:
           url: ${{ secrets.CONNECT_SERVER }}
           api-key: ${{ secrets.CONNECT_API_KEY }}
-          access-type: logged_in
+          access-type: all
           dir: |
             .:/shiny-app-demo-cicd-github-actions
